# aesthema

./: .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  ruff.toml  setup.py
.github/workflows/: test.yml
aesthema/: __init__.py  colormaps.py  colors.py
aesthema_colormaps/: __init__.py  colormaps.py  colors.py
docs/: plot_colormaps.py  plot_colors.py
examples/: line_plots.py
test/: test_colormaps.py
