[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aesthema"
authors = [
    {name = "jspieler", email = "jspieler@outlook.de"},
]
description = "Modern & visually appealing colormaps for Matplotlib"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Matplotlib", "Colormaps"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cycler",
    "matplotlib",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jspieler/aesthema"
Repository = "https://github.com/jspieler/aesthema.git"

[project.optional-dependencies]
linting = ["mypy", "pylint", "ruff"]
testing = ["numpy"]

[tool.setuptools]
packages = ["aesthema"]
